[tool.poetry]
name = "canlib"
version = "0.1.0"
description = ""
authors = ["Filippo Rossi <filipporossi@hey.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "^4.5.1"
Jinja2 = "^3.1.2"
click = "^8.1.3"
GitPython = "^3.1.27"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[tool.poetry.scripts]
canlib = "canlib:main"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
